switch piboy from the basic firmware

--- a/package/batocera/core/batocera-system/batocera-boot-piboy.conf
+++ b/package/batocera/core/batocera-system/batocera-boot-piboy.conf
@@ -23,7 +23,7 @@ autoresize=true
 
 # maximum resolution (get the full list for your display with "batocera-resolution listModes")
 # for more info: https://wiki.batocera.org/display_issues#force_any_specific_supported_resolution_in_es_instead_of_the_default_maximum_one
-es.resolution=max-640x480
+#es.resolution=max-640x480
 
 ### below are copied values from batocera.conf to make them ###
 ### available in an early boot stage ---- DON'T CHANGE THEM ###
