--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -435,6 +435,21 @@ naomi:
     demul:
       demul:    { requireAnyOf: [BR2_PACKAGE_DEMUL]             }
 
+naomigd:
+  name:       Naomi GDROM
+  manufacturer: Sega
+  release: 1998
+  hardware: arcade
+  extensions: [lst, bin, dat, zip, 7z]
+  platform:   naomigd, arcade
+  emulators:
+    libretro:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_FLYCAST]  }
+    flycast:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_FLYCAST]           }
+    demul:
+      demul:    { requireAnyOf: [BR2_PACKAGE_DEMUL]             }
+
 atomiswave:
   name:       Atomiswave
   manufacturer: Sammy
@@ -2925,8 +2940,12 @@ naomi2:
   extensions: [zip, 7z]
   platform: naomi2, arcade
   emulators:
+    libretro:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_FLYCAST]  }
+    flycast:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_FLYCAST]           }
     demul:
-      demul: { requireAnyOf: [BR2_PACKAGE_DEMUL] }
+      demul:    { requireAnyOf: [BR2_PACKAGE_DEMUL]             }
   comment_en: |
     ---------------------------------
     ## NAOMI 2 IMPORTANT INFO ##
@@ -2981,6 +3000,21 @@ naomi2:
     You can access the Service Menu using F4 and then use F2 to navigate with F4 to select.
 
     Enjoy Naomi 2 games under Linux!
+
+naomi2gd:
+  name:       Naomi2 GDROM
+  manufacturer: Sega
+  release: 2000
+  hardware: arcade
+  extensions: [lst, bin, dat, zip, 7z]
+  platform:   naomi2gd, arcade
+  emulators:
+    libretro:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_FLYCAST]  }
+    flycast:
+      flycast:  { requireAnyOf: [BR2_PACKAGE_FLYCAST]           }
+    demul:
+      demul:    { requireAnyOf: [BR2_PACKAGE_DEMUL]             }
 
 hikaru:
   name:       Hikaru
