--- a/package/batocera/ports/eduke32/Config.in
+++ b/package/batocera/ports/eduke32/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_EDUKE32
 	bool "eduke32"
 	depends on BR2_INSTALL_LIBSTDCPP
+	select BR2_PACKAGE_NBLOOD
 	select BR2_PACKAGE_SDL2
 	select BR2_PACKAGE_SDL2_IMAGE
 	help
