--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -790,7 +790,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	#Hydra Castle Labyrinth
 	select BR2_PACKAGE_HCL		 		        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
-	select BR2_PACKAGE_ABUSE		 	        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+	#select BR2_PACKAGE_ABUSE		 	        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	select BR2_PACKAGE_CDOGS    	 	        if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL && BR2_PACKAGE_BATOCERA_TARGET_RPI4
 	select BR2_PACKAGE_HOST_PYTHON_PROTOBUF     if BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL && BR2_PACKAGE_CDOGS
