--- a/Config.in
+++ b/Config.in
@@ -151,6 +151,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/prototype/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/quakespasm/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/quake3/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/vkquake/Config.in" 
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/xatrix/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/yquake2/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake/yquake2_refvk/Config.in"
