--- a/configs/batocera-aarch32-subsystem_defconfig
+++ b/configs/batocera-aarch32-subsystem_defconfig
@@ -7,11 +7,12 @@ BR2_ARM_FPU_VFPV3=y
 BR2_PACKAGE_BATOCERA_TARGET_AARCH32_SUBSYSTEM=y
 
 # Toolchain definition
-BR2_GCC_VERSION_11_X=y
 BR2_BINUTILS_VERSION_2_38_X=y
+BR2_BINUTILS_ENABLE_LTO=y
+BR2_GCC_VERSION_11_X=y
 BR2_GCC_ENABLE_GRAPHITE=y
 BR2_GCC_ENABLE_LTO=y
-BR2_OPTIMIZE_3=y
+BR2_OPTIMIZE_S=y
 BR2_SHARED_STATIC_LIBS=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 # required for utf-8
