--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
@@ -23,6 +23,9 @@ cplus4:
 flash:
   emulator: lightspark
   core:     lightspark
+fmtowns:
+  emulator: libretro
+  core:     mess
 gamecube:
   emulator: libretro
   core:     dolphin
