--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -125,6 +125,7 @@ amiga500:
     libretro:
       puae:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
       puae2021: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
+      uae4arm:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_UAE4ARM] }
   comment_en: |
     For more info: https://wiki.batocera.org/systems:amiga500
   comment_fr: |
@@ -148,6 +149,7 @@ amiga1200:
     libretro:
       puae:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
       puae2021: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
+      uae4arm:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_UAE4ARM] }
   comment_en: |
     For more info: https://wiki.batocera.org/systems:amiga500
   comment_fr: |
@@ -169,6 +171,7 @@ amigacd32:
     libretro:
       puae:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
       puae2021: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
+      uae4arm:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_UAE4ARM] }
 
 amigacdtv:
   name:       Amiga CDTV
@@ -184,7 +187,8 @@ amigacdtv:
     libretro:
       puae:     { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
       puae2021: { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
-
+      uae4arm:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_UAE4ARM] }
+      
 nes:
   name:       Nintendo Entertainment System
   manufacturer: Nintendo
@@ -3243,6 +3247,7 @@ amigademo:
     libretro:
       puae:      { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
       puae2021:  { requireAnyOf: [BR2_PACKAGE_LIBRETRO_PUAE] }
+      uae4arm:   { requireAnyOf: [BR2_PACKAGE_LIBRETRO_UAE4ARM] }
 
 alephone:
   name:       Marathon Trilogy
