--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -4308,6 +4308,180 @@ libretro:
                             "Off":    100
                             "On":     0
 
+    uae4arm:
+      features: [padtokeyboard]
+      shared: [rewind, autosave]
+      cfeatures:
+            uae4arm_model:
+                group: CORE SETTINGS
+                prompt:      AMIGA MODEL
+                description: Force a specific model and prevent tags detection.
+                choices:
+                    "Autodetect (by game name tag)":   automatic
+                    "A500 (512KB Chip + 512KB Slow)":  A500
+                    "A600 (2MB Chip + 8MB Fast)":      A600
+                    "A1200 (2MB Chip + 8MB Fast)":     A1200
+                    "CDTV (1MB Chip)":                 CDTV
+                    "CD32 Default (2MB Chip)":         CD32
+            fastmem:
+                group: CORE SETTINGS
+                prompt:      EMULATED RAM SIZE
+                choices:
+                    "None":                       none
+                    "1MB":                        1 MB
+                    "2MB":                        2 MB
+                    "4MB":                        4 MB
+                    "8MB":                        8 MB
+            resolution:
+                group: CORE SETTINGS
+                prompt:      INTERNAL RESOLUTION
+                choices:
+                    "320x240":                    320x240
+                    "320x256":                    320x256
+                    "320x262":                    320x262
+                    "640x240":                    640x240
+                    "640x256":                    640x256
+                    "640x262":                    640x262
+                    "640x270":                    640x270
+                    "768x270":                    768x270
+            deinterlace:
+                group: CORE SETTINGS
+                prompt:      LINE DOUBLING (DEINTERLACE)
+                choices:
+                    "On": on
+                    "Off": off
+            leds:
+                group: CORE SETTINGS
+                prompt:      ONSCREEN STATUS LEDS
+                choices:
+                    "On": on
+                    "Off": off
+            copper:
+                group: CORE SETTINGS
+                prompt:      COPPER COPROCESSOR
+                choices:
+                    "On": on
+                    "Off": off
+      systems:
+            amiga500:
+                cfeatures:
+                    floppy_speed:
+                        group: CORE SETTINGS
+                        prompt:      FLOPPY SPEED
+                        choices:
+                            "100%":    100
+                            "200%":    200
+                            "400%":    400
+                            "800%":    800
+                    whdload:
+                        group: CORE SETTINGS
+                        prompt:      WHDLOAD LAUNCHER
+                        choices:
+                            "Files":    files
+                            "HDFs":     hdfs
+                    disable_joystick:
+                        group: CONTROLLER SETTINGS
+                        prompt:      DISABLE EMULATOR JOYSTICK
+                        description: Passes all physical keyboard events for Pad2Key.
+                        choices:
+                            "Off":    disabled
+                            "On":     enabled
+                    pad_options:
+                        group: CONTROLLER SETTINGS
+                        prompt:      JUMP ON A
+                        description: Makes second fire button press up instead.
+                        choices:
+                            "Off":    disabled
+                            "On":     jump
+                    controller1_uae4arm:
+                        group: CONTROLLER SETTINGS
+                        prompt:      CONTROLLER 1 TYPE
+                        description: Select controller type for Amiga P1.
+                        choices:
+                            "Retropad":            1
+                            "CD32 Pad":            517
+                            "Analog Joystick":     773
+                            "Joystick":            261
+                            "Keyboard":            259
+                    controller2_uae4arm:
+                        group: CONTROLLER SETTINGS
+                        prompt:      CONTROLLER 2 TYPE
+                        description: Select controller type for Amiga P2.
+                        choices:
+                            "Retropad":            1
+                            "CD32 Pad":            517
+                            "Analog Joystick":     773
+                            "Joystick":            261
+                            "Keyboard":            259
+                    uae4arm_pinball_mode:
+                        group: CONTROLLER SETTINGS
+                        prompt:      PINBALL MAPPING MODE
+                        description: Use to play pinball games with correct mapping.
+                        choices:
+                            "Off":                  disabled
+                            "Modern":               modern
+                            "Modern Alternative":   modern_alt
+                            "Classic":              classic
+            amiga1200:
+                cfeatures:
+                    floppy_speed:
+                        group: CORE SETTINGS
+                        prompt:      FLOPPY SPEED
+                        choices:
+                            "100%":    100
+                            "200%":    200
+                            "400%":    400
+                            "800%":    800
+                    whdload:
+                        group: CORE SETTINGS
+                        prompt:      WHDLOAD LAUNCHER
+                        choices:
+                            "Files":    files
+                            "HDFs":     hdfs
+                    disable_joystick:
+                        group: CONTROLLER SETTINGS
+                        prompt:      DISABLE EMULATOR JOYSTICK
+                        description: Passes all physical keyboard events for Pad2Key.
+                        choices:
+                            "Off":    disabled
+                            "On":     enabled
+                    pad_options:
+                        group: CONTROLLER SETTINGS
+                        prompt:      JUMP ON A
+                        description: Makes second fire button press up instead.
+                        choices:
+                            "Off":    disabled
+                            "On":     jump
+                    controller1_uae4arm:
+                        group: CONTROLLER SETTINGS
+                        prompt:      CONTROLLER 1 TYPE
+                        description: Select controller type for Amiga P1.
+                        choices:
+                            "Retropad":            1
+                            "CD32 Pad":            517
+                            "Analog Joystick":     773
+                            "Joystick":            261
+                            "Keyboard":            259
+                    controller2_uae4arm:
+                        group: CONTROLLER SETTINGS
+                        prompt:      CONTROLLER 2 TYPE
+                        description: Select controller type for Amiga P2.
+                        choices:
+                            "Retropad":            1
+                            "CD32 Pad":            517
+                            "Analog Joystick":     773
+                            "Joystick":            261
+                            "Keyboard":            259
+                    uae4arm_pinball_mode:
+                        group: CONTROLLER SETTINGS
+                        prompt:      PINBALL MAPPING MODE
+                        description: Use to play pinball games with correct mapping.
+                        choices:
+                            "Off":                  disabled
+                            "Modern":               modern
+                            "Modern Alternative":   modern_alt
+                            "Classic":              classic
+
     px68k:
       features: [padtokeyboard]
       cfeatures:
