--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -1144,7 +1144,8 @@ libretro:
                     "NES Zapper":           258
                     "Arkanoid paddle":      514
     flycast:
-      shared: [autosave, cheevos]
+      shared: [autosave]
+      features: [cheevos]
       cfeatures:
             reicast_synchronous_rendering:
                 group: ADVANCED OPTIONS
