--- a/configs/batocera-rpi4_defconfig
+++ b/configs/batocera-rpi4_defconfig
@@ -11,7 +11,7 @@ BR2_BINUTILS_ENABLE_LTO=y
 BR2_GCC_VERSION_11_X=y
 BR2_GCC_ENABLE_GRAPHITE=y
 BR2_GCC_ENABLE_LTO=y
-BR2_OPTIMIZE_S=y
+BR2_OPTIMIZE_3=y
 BR2_TARGET_OPTIMIZATION="-pipe -mcpu=cortex-a72 -mtune=cortex-a72"
 BR2_SHARED_STATIC_LIBS=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
